<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Resources related to GoingOnApp -->
    <string name="title_activity_going_on_app_map_">GoingOnApp</string>
    <string name="title_activity_going_on_app_sign_up_">GoingOnApp</string>

    <!-- Resources for activity_going_on_app_init -->
    <string name="app_name">GoingOnApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_init">Init</string>

    <!-- Resources for activity_going_on_app_login -->
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in"><b>Log in</b></string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_confirmed_password">The password doesn´t match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_location_found">No location found</string>
    <string name="error_no_internet">No internet access</string>
    <string name="error_user_already_exists">Given email already exists</string>
    <string name="error_user_doesnt_exist">User doesn\'t exists</string>
    <string name="app_id">716737715041844</string>

    <!-- Resources for activity_going_on_app_add_event -->
    <string name="add_event_progress">Add event</string>
    <string name="create_event">Create event</string>
    <string name="event_name">Event\'s name</string>
    <string name="event_description">Event\'s description</string>
    <string name="event_price">Event\'s price</string>
    <string name="event_location">Event\'s location</string>
    <string name="select_event_categorie">Select event categorie</string>

    <string-array name="event_categories_array">
        <item>Concert</item>
        <item>Party</item>
        <item>Theater</item>
        <item>Food</item>
        <item>Business</item>
        <item>Art</item>
    </string-array>

    <string name="select_event_initial_date">Select event\'s initial date:</string>
    <string name="select_event_final_date">Select event\'s final date:</string>
    <string name="select_event_initial_time">Select event\'s initial time:</string>
    <string name="select_event_final_time">Select event\'s final time:</string>
    <string name="error_event_not_valid">Event is not valid</string>

    <!-- Resources related with colors -->
    <color name="orange">#99F15a24</color>
    <color name="GO_light_gray">#999999</color>
    <color name="GO_dark_gray">#FF666666</color>

    <!-- Resources for going_on_app_map Menu -->
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add Event</string>
    <string name="action_logout">Log Out</string>

    <!-- Resources for activity_going_on_app_signup -->
    <string name="signUp">Sign up</string>
    <string name="prompt_userName">Nombre de Usuario</string>
    <string name="prompt_emailConfirm">Confirmar Email</string>
    <string name="prompt_passwordConf">Confirmar Password</string>
    <string name="prompt_userDesc">Descripcion Usuario</string>
    <string name="mobileUser">Mobile User</string>
    <string name="LocalUser">Local User</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_going_on_app_add_event_">GoingOnApp</string>

    <!-- Resources for activity_going_on_app_profile_user_mobile Menu -->
    <string name="user_name">User name</string>
    <string name="user_description">Descriptive frase that the user wants to display</string>
    <string name="user_events">Events</string>
    <string name="user_tickets">Tickets</string>
    <string name="title_activity_going_on_app_mobile_user_">GoingOnApp</string>
    <string name="title_activity_going_on_app_event_list_">GoingOnApp</string>
    <string name="title_activity_going_on_app_tickets_list_">GoingOnApp</string>
    <string name="title_activity_going_on_app_event_profile_">GoingOnApp</string>
    <string name="title_activity_going_on_app_map_local_">GoingOnApp</string>
    <string name="title_activity_going_on_app_main_">GoingOnApp</string>
    <string name="title_activity_going_on_app_search_">GoingOnAppSearch_Activity</string>
    <string name="title_activity_going_on_app_local_profile_">GoingOnApp</string>

    <!-- Resources for activity_going_on_app_event_profile -->
    <string name="event_category">Event\'s Category</string>    
    <string name="event_date">Event\'s Date</string>
    <string name="event_time">Event\'s Time</string>
    <string name="go_waze">Get Direction</string>
    
</resources>
