<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/sigin_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/innercontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/textViewSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@layout/rectangle_login"
                android:hint="@string/prompt_userName"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/passwordConf"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:hint="@string/prompt_passwordConf"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/userDescription"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:hint="@string/prompt_userDesc"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:checkedButton="@+id/radioButton_mobile_user"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <RadioButton
                    android:id="@+id/radioButton_mobile_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/mobileUser"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/radioButton_local_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/LocalUser"
                    android:textColor="@android:color/white" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@layout/button_round_login"
                    android:text="@string/signUp"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button_cancel_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@layout/button_round_login"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>