<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/sigin_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top" >

        <LinearLayout
            android:id="@+id/innercontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_add_event"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/create_event"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/editText_event_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:hint="@string/event_name"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/editText_event_price"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:ems="10"
                android:hint="@string/event_price"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/editText_event_descr"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:hint="@string/event_description"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <MultiAutoCompleteTextView
                android:id="@+id/editText_event_location"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:hint="@string/event_location"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <TextView
                android:id="@+id/textView_select_event_categorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/select_event_categorie"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:entries="@array/event_categories_array"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView_select_event_initial_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/select_event_initial_date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <DatePicker
                android:id="@+id/datePicker_initial_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView_select_event_initial_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/select_event_initial_time"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TimePicker
                android:id="@+id/timePicker_initial_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/rectangle_login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView_select_event_final_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/select_event_final_date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <DatePicker
                android:id="@+id/datePicker_final_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@layout/rectangle_login"
                android:layout_marginTop="15dp"
                android:calendarViewShown="false"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView_select_event_final_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/select_event_final_time"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TimePicker
                android:id="@+id/timePicker_final_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@layout/rectangle_login"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_create_event"
                    android:layout_width="wrap_content" 
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@layout/button_round_login"
                    android:text="@string/create_event"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button_cancel_create_event"
                    android:layout_width="wrap_content" 
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@layout/button_round_login"
                    android:text="@string/cancel"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>